[package]
name = "st7789v"
categories = ["ebmedded", "hardware-support", "no-std"]
version = "0.1.2"
edition = "2018"

description = "A platform agnostic driver to interface with the ST7789V (waveshare 2inch LCD Module), works on VersionFive2"
keywords = ["embedded-hal", "display", "VersionFive2"]
repostitory = "https://github.com/x931890193/st7789v"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "0.2.3"
# for example
spidev = "0.5.1"
sysfs_gpio = "0.6.1"

[dependencies.embedded-graphics]
optional = true
version = "0.6.2"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]


[[example]]
name = "versionfive2"
path = "examples/versionfive2.rs"
description = "A simple example that shows how to use waveshare-lcd use versionFive2"
